# Text-Image-Augmentation

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  demo.py
include/: conversion.h  delaunay.h  imgwarp_mls.h  imgwarp_mls_rigid.h  imgwarp_mls_similarity.h  imgwarp_piecewiseaffine.h
src/: Augment.cpp  conversion.cpp  delaunay.cpp  imgwarp_mls.cpp  imgwarp_mls_rigid.cpp  imgwarp_mls_similarity.cpp  imgwarp_piecewiseaffine.cpp
